--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,139 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Kdam+Thmor+Pro&display=swap');
+
+*{
+margin: 0;
+padding: 0;
+font-family: 'Kdam Thmor Pro', sans-serif;
+}
+body,html{
+  /* background-color: black; */
+}
+.header{
+padding: 20px;
+  display: flex;
+  justify-content: space-between;
+}
+.search-container{
+  margin-top: 20px ;
+  display: flex;
+  justify-content: center;
+}
+.search{
+  display: flex;
+  background-color: #EBECED;
+  padding: 10px;
+  width: 70%;
+  border-radius: 20px;
+  align-items: center;
+}
+.search>input{
+  width: 80%;
+  border: none;
+  background-color:#EBECED;
+  padding-inline:10px;
+  height: 30px;
+  font-size: 15px;
+}
+.search>input:focus{
+  outline: none;
+}
+.note{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* width: 250px; */
+ min-height: 200px;
+  background-color: azure;
+  margin: 5px;
+  padding: 20px;
+  border-radius: 10px;
+  white-space: pre-wrap;
+  /* word-wrap: break-word; 
+  overflow-wrap: break-word;  */
+}
+.footer{
+  display: flex;
+  justify-content: space-between;
+}
+.colors>*{
+  height: 20px;
+  width: 20px;
+  /* background-color: aquamarine; */
+  margin: 5px;
+  border-radius: 10px;
+
+}
+.colors{
+  display: flex;
+  justify-content: end;
+}
+.notes{
+ display: grid;
+	grid-gap: 1rem;
+	grid-template-columns: repeat(
+		auto-fill,
+		minmax(250px, 1fr)
+	);
+  padding-inline: 40px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+  
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.footer>button{
+  width: 70px;
+  height: 30px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+.tmpnote textarea{
+  border: none;
+  resize:none;
+  background-color: #67d7cc;
+}
+textarea:focus {
+	outline: none;
+}
+.text-container {
+  max-width: 100%; /* Adjust to your specific width */
+  max-height: 170px; /* Adjust to your specific height */
+  overflow: auto;
+  height: 180px;
+}
+.text{
+  white-space: pre-wrap;
+}
+.note>div{ 
+  margin: 6px;
+}
+
+.text-container::-webkit-scrollbar {
+  width: 0.1em;
+  background-color: transparent;
+}
+
+/* .text-container::-webkit-scrollbar-thumb {
+  background-color: transparent;
+} */
+
+.edit,.delete{
+  cursor: pointer;
+  border-radius: 10px;
+}
+.edit:hover,.delete:hover{
+  background-color:white;
+}
+.note.tmpnote {
+	background-color: #67d7cc;
+  height: 250px;
+}
+
+.note:hover{
+  cursor: pointer;
+}
+.app{
+  width: 100%;
+  height: 100%;
 }
